(lang dune 3.8)
(name lwt_eio)
(formatting disabled)
(generate_opam_files true)
(source (github ocaml-multicore/lwt_eio))
(license ISC)
(authors "Thomas Leonard")
(maintainers "talex5@gmail.com")
(documentation "https://ocaml-multicore.github.io/lwt_eio")
(package
 (name lwt_eio)
 (synopsis "Run Lwt code within Eio")
 (description "An Lwt engine that allows running Lwt within an Eio event loop.")
 (depends
  (eio (>= 0.13))
  (lwt (>= 5.7.0))
  (mdx (and (>= 1.10.0) :with-test))
  (eio_main :with-test)))
(using mdx 0.2)
